--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,6 +10,9 @@ data_ingestion_config:
   ingested_train_dir: train
   ingested_test_dir: test 
 
+
+
+
 data_validation_config:
   schema_dir: config
   schema_file_name: schema.yaml
@@ -28,6 +31,8 @@ model_trainer_config:
   trained_model_dir: trained_model
   model_file_name: model.pkl
   base_accuracy: 0.6
+  model_config_dir: config
+  model_config_file_name: model.yaml
 
 
 model_evaluation_config:
@@ -35,4 +40,4 @@ model_evaluation_config:
   
 
 model_pusher_config:
-  model_export_dir: saved_models  
+  model_export_dir: saved_models
